# HeliosLab

./: .gitignore  .orch-v10-001-verified  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  404.html  ADR.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  LICENSE  PLAN.md  PRD.md  README.html  README.md  SOTA.md  SPEC.md  SSOT.md  STABILIZATION_REPORT.md  SUPPORT.md  Taskfile.yml  VERSION  _typos.toml  api.html  audit_scorecard.json  axe-config.ts  biome.json  branch-health-reconcile-2026-03-03.html  clippy.toml  codecov.yml  deny.toml  development-guide.html  document-index.html  (+12 more)
.agileplus/: worklog.md
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: CODE_OF_CONDUCT.md  scorecard.yml
.serena/: project.yml
assets/: README.md.BITTzKFv.js  README.md.BITTzKFv.lean.js  api.md.g7rw6fM5.js  app.7Lw4NsUq.js  app.CoFBu3-V.js  branch-health-reconcile-2026-03-03.md.MbRXUE5o.js  branch-health-reconcile-2026-03-03.md.MbRXUE5o.lean.js  changes_shared-modules_polyglot-config-core-v1_proposal.md.Dg64tUEv.js  changes_shared-modules_polyglot-config-core-v1_proposal.md.Dg64tUEv.lean.js  changes_shared-modules_polyglot-config-core-v1_tasks.md.jbRkwYnh.js  changes_shared-modules_polyglot-config-core-v1_tasks.md.jbRkwYnh.lean.js  context_governance_git-backed-documentation_README.md.BnR4XNUc.js  context_governance_git-backed-documentation_README.md.BnR4XNUc.lean.js  context_governance_git-backed-documentation_adr_ADR-0001-internal-elicitation.md.D9nfGW52.js  context_governance_git-backed-documentation_adr_ADR-0001-internal-elicitation.md.D9nfGW52.lean.js  context_governance_git-backed-documentation_fr_FR-0001-documentation-stubs.md.qTKHFIzW.js  context_governance_git-backed-documentation_fr_FR-0001-documentation-stubs.md.qTKHFIzW.lean.js  context_governance_git-backed-documentation_plan_PLAN-0001-docs-batching.md.CU78sgFX.js  context_governance_git-backed-documentation_plan_PLAN-0001-docs-batching.md.CU78sgFX.lean.js  context_governance_git-backed-documentation_prd_PRD-0001-git-backed-documentation.md.CqXsGyoK.js  context_governance_git-backed-documentation_prd_PRD-0001-git-backed-documentation.md.CqXsGyoK.lean.js  context_governance_git-backed-documentation_templates_ADR_TEMPLATE.md.ogVetlHl.js  context_governance_git-backed-documentation_templates_ADR_TEMPLATE.md.ogVetlHl.lean.js  context_governance_git-backed-documentation_templates_FR_TEMPLATE.md.f555FheV.js  context_governance_git-backed-documentation_templates_FR_TEMPLATE.md.f555FheV.lean.js  context_governance_git-backed-documentation_templates_PLAN_TEMPLATE.md.CIjSiUT1.js  context_governance_git-backed-documentation_templates_PLAN_TEMPLATE.md.CIjSiUT1.lean.js  development-guide.md.BKOHXxeT.js  (+40 more)
crates/pheno-ffi-go/: Cargo.toml  pheno.h
crates/pheno-ffi-go/go/phenoconfig/: phenoconfig.go
crates/pheno-ffi-go/src/: lib.rs
crates/pheno-ffi-python/: Cargo.toml  pyproject.toml
crates/pheno-ffi-python/src/: lib.rs
pheno-cli/: Cargo.toml
pheno-cli/src/: main.rs  tui.rs
(+313 files in other folders)
