[workspace]
resolver = "2"
members = ["pheno-core", "pheno-db", "pheno-crypto", "pheno-cli", "crates/pheno-ffi-python", "crates/pheno-ffi-go"]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.14.11-canary.3"
edition = "2021"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap-ext = { git = "https://github.com/KooshaPari/clap-ext", tag = "v0.1.0" }
