[package]
name = "pheno-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phenoctl"
path = "src/main.rs"

[dependencies]
pheno-core = { path = "../pheno-core" }
pheno-db = { path = "../pheno-db" }
pheno-crypto = { path = "../pheno-crypto" }
phenotype-rate-limit = { path = "../../phenoShared/crates/phenotype-rate-limit" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
hex = "0.4"
rpassword = "7"
tracing-subscriber = { workspace = true }
