[package]
name = "pheno-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phenoctl"
path = "src/main.rs"

[dependencies]
pheno-core = { path = "../pheno-core" }
pheno-db = { path = "../pheno-db" }
pheno-crypto = { path = "../pheno-crypto" }
clap = { workspace = true }
clap-ext = { workspace = true }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
hex = "0.4"
rpassword = "7"
tracing-subscriber = { workspace = true }
