[package]
name = "pheno-ffi-go"
version.workspace = true
edition.workspace = true

[lib]
name = "pheno_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pheno-core = { path = "../../pheno-core" }
pheno-db = { path = "../../pheno-db" }
pheno-crypto = { path = "../../pheno-crypto" }
chrono = "0.4"
hex = "0.4"

[dev-dependencies]
tempfile = "3.11"
