[package]
name = "pheno-ffi-python"
version.workspace = true
edition.workspace = true

[lib]
name = "phenotype_config"
crate-type = ["cdylib"]

[dependencies]
pheno-core = { path = "../../pheno-core" }
pheno-db = { path = "../../pheno-db" }
pheno-crypto = { path = "../../pheno-crypto" }
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3", "abi3-py39"] }
chrono = "0.4"
hex = "0.4"
